--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
-
+body {
+  background-color: #c7d1e2;
+}
+.weather-app {
+  background-color: #edece6;
+  max-width: 600px;
+  margin: 45px auto;
+  padding: 30px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 16px;
+}
