styled button and search

--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,20 @@ body {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
 }
+.search-form-input {
+  background-color: #c7d1e2;
+  border: none;
+  border-radius: 10px;
+  width: 80%;
+  padding: 15px 20px;
+  font-size: 15px;
+}
+.search-form-button {
+  background-color: #98a9b7;
+  border: none;
+  border-radius: 10px;
+  padding: 15px 30px;
+  font-size: 15px;
+  color: #edece6;
+  margin-left: 4px;
+}
