--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,9 @@ body {
   background-color: #c7d1e2;
   font-family: "Manrope", sans-serif;
 }
-
+a {
+  color: #98a9b7;
+}
 .weather-app {
   background-color: #edece6;
   max-width: 600px;
@@ -11,6 +13,11 @@ body {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
 }
+header {
+  border-bottom: 1px solid #c7d1e2;
+  padding: 0 0 30px 0;
+}
+
 .search-form-input {
   background-color: #c7d1e2;
   border: none;
@@ -27,4 +34,11 @@ body {
   font-size: 15px;
   color: #edece6;
   margin-left: 4px;
+}
+footer {
+  border-top: 1px solid #c7d1e2;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.6);
 }
