--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,17 @@ main {
   display: flex;
   justify-content: space-between;
 }
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+  color: #536168;
+}
+.weather-app-details {
+  font-size: 16px;
+  line-height: 22px;
+  color: #536168;
+}
 footer {
   border-top: 1px solid #c7d1e2;
   padding: 30px 0 0 0;
