linked java script file to index

--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ main {
   font-weight: 500;
 }
 .weather-app-details strong {
-  color: #dbddbd;
+  color: #d29c44;
 }
 .weather-app-icon {
   font-size: 40px;
