--- a/src/style.css
+++ b/src/style.css
@@ -74,6 +74,33 @@ main {
   margin-top: 16px;
   color: #536168;
 }
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-forecast-date {
+  text-align: center;
+  color: #536168;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.weather-forecast-icon {
+  text-align: center;
+  font-size: 25px;
+}
+.weather-forecast-temperatures {
+  text-align: center;
+  margin-top: 10px;
+  color: #d29c44;
+  display: flex;
+  justify-content: center;
+}
+.weather-forecast-temperature {
+  padding: 0 10px;
+  text-align: center;
+}
 footer {
   border-top: 1px solid #c7d1e2;
   padding: 30px 0 0 0;
